src/PedeLogo.Catalogo.Api/k8s/api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deploymnet
spec:
  replicas: 1
  selector:
    matchLabels: 
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: api
          image: alebarrionovo/pedelogo-catalogo:v1.0.0
          ports:
            - containerPort: 80
              name: http
            - containerPort: 443
              name: https
          imagePullPolicy: Always
          resources:
            requests:            
              memory: "32Mi"
              cpu: "150m"
            limits:
              memory: "64Mi"
              cpu: "500m"
          readinessProbe:
            httpGet:
              path: /read
              port: 80
              scheme: HTTP
            timeoutSeconds: 1
            failureThreshold: 3
            periodSeconds: 5           
          startupProbe:
            httpGet:
              path: /health
              port: 80
              scheme: HTTP
            failureThreshold: 30
            periodSeconds: 10            
          livenessProbe:
            httpGet:
              path: /health
              port: 80
              scheme: HTTP              
            timeoutSeconds: 1
            failureThreshold: 20
            periodSeconds: 5
