src/PedeLogo.Catalogo.Api/k8s/api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service
spec:
  selector:
    app: api
  ports:
    - port: 80
      targetPort: 80
      #nodePort: 30000
      name: http
    - port: 443
      targetPort: 443
      name: https
  #type: NodePort
   type: ClusterIP
