src/PedeLogo.Catalogo.Api/k8s/api/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: claronetcombo  
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - api.claronetcombo.com.br
    secretName: api-tls
  ingressClassName: nginx
  rules:
    - host: api.claronetcombo.com.br
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: api-service
                port:
                  number: 80
